correct alignment

--- a/front-end/src/components/Entries.css
+++ b/front-end/src/components/Entries.css
@@ -72,7 +72,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     gap: 0.3rem;
   }
 
